# pawTube

./: CMakeLists.txt
script/: build.bat  compile.bat
src/: CFramelessWindow.cpp  CFramelessWindow.h  CMakeLists.txt  LanguageSettings.cpp  LanguageSettings.h  MainWindow.cpp  MainWindow.h  MainWindowHelper.cpp  MainWindowHelper.h  MainWindowHelperPrivate.cpp  MainWindowHelperPrivate.h  config.cpp  config.h  main.cpp
